--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <form action="busca">
-    <input type="search" name="busca" id="busca">
-
+<body id="busca">
+    <form class="exemple" action="action_page.php">
+        <input type="search" placeholder="search..." id="busca">
+        <button type="submit"><i class="buttonsearch"></i></button>
 
 
     </form>
