--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body id="busca">
     <form class="exemple" action="action_page.php">
         <input type="search" placeholder="search..." id="busca">
-        <button type="submit"><i class="buttonsearch"></i></button>
+        <button class="image-button" type="submit"></i></button>
 
 
     </form>
